--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   display: grid;
   flex-wrap: wrap;
   gap: 2px;
-  width: 100%; /* Adjust the width as needed */
-  height: 200px; /* Adjust the height as needed */
+  width: 100%;
+  height: 200px; 
   
 }
 
