--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-.colors {
+/* .colors {
   display: grid;
   flex-wrap: wrap;
   gap: 2px;
   width: 100%;
   height: 200px; 
   
-}
+} */
 
 
-/* 
+
 .colors {
   min-height: calc(100vh - 100px);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(223.33px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(96px, 1fr));
-} */
+}
